force-app/main/default/objects/Ferias__c/Ferias__c.object-meta.xml
<CustomObject>
    <label>Férias</label>
    <nameField>
        <displayFormat>F {000}</displayFormat>
        <label>Nº de Férias</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Férias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>