force-app/main/default/objects/Ferias__c/fields/Apenas_historico__c.field-meta.xml
<CustomField>
    <fullName>Apenas_historico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apenas histórico</label>
    <type>Checkbox</type>
</CustomField>