force-app/main/default/objects/Ferias__c/fields/Colaborador3__c.field-meta.xml
<CustomField>
    <fullName>Colaborador3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Férias (Colaborador)</relationshipLabel>
    <relationshipName>Feriass</relationshipName>
    <type>Lookup</type>
</CustomField>