force-app/main/default/objects/Ferias__c/fields/Data_Final__c.field-meta.xml
<CustomField>
    <fullName>Data_Final__c</fullName>
    <label>Último dia de descanso</label>
    <type>Date</type>
</CustomField>