force-app/main/default/objects/Ferias__c/fields/Data_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicial__c</fullName>
    <inlineHelpText>Não recomendamos o início e término férias em sábados, domingos e feriados.</inlineHelpText>
    <label>Primeiro dia de descanso</label>
    <type>Date</type>
</CustomField>