force-app/main/default/objects/Ferias__c/fields/DescricaoSolicitacao__c.field-meta.xml
<CustomField>
    <fullName>DescricaoSolicitacao__c</fullName>
    <label>Descrição da Solicitação</label>
    <type>TextArea</type>
</CustomField>