force-app/main/default/objects/Ferias__c/recordTypes/Registro.recordType-meta.xml
<RecordType>
    <fullName>Registro</fullName>
    <active>true</active>
    <description>Utilizar para solicitação de colaboradores que não possuem acesso ao Salesforce.</description>
    <label>Registro de Solicitação</label>
</RecordType>