force-app/main/default/objects/Ferias__c/recordTypes/Solicitacao.recordType-meta.xml
<RecordType>
    <fullName>Solicitacao</fullName>
    <active>true</active>
    <label>Solicitação</label>
</RecordType>