force-app/main/default/objects/Ferias__c/validationRules/Antecedencia.validationRule-meta.xml
<ValidationRule>
    <fullName>Antecedencia</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
    $User.ProfileId != &apos;00e6e000002JQWW&apos;,
    ISNEW(),
    (Data_Inicial__c - TODAY()) &lt; 15

)</errorConditionFormula>
    <errorDisplayField>Data_Inicial__c</errorDisplayField>
    <errorMessage>As férias devem ser solicitadas com no mínimo 15 dias de antecedência.</errorMessage>
</ValidationRule>