force-app/main/default/objects/Ferias__c/validationRules/Data_inconsistente.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_inconsistente</fullName>
    <active>true</active>
    <errorConditionFormula>Data_Final__c &lt; Data_Inicial__c</errorConditionFormula>
    <errorDisplayField>Data_Final__c</errorDisplayField>
    <errorMessage>A data final não pode ser anterior à data inicial.</errorMessage>
</ValidationRule>