force-app/main/default/objects/Ferias__c/validationRules/Maximo30dias.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximo30dias</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
(Data_Final__c - Data_Inicial__c) &gt; 30
)</errorConditionFormula>
    <errorMessage>O período de férias não pode ser superior a 30 dias</errorMessage>
</ValidationRule>