force-app/main/default/objects/Ferias__c/listViews/HOSPCOM_Solicita_es.listView-meta.xml
<ListView>
    <fullName>HOSPCOM_Solicita_es</fullName>
    <columns>NAME</columns>
    <columns>Colaborador3__c</columns>
    <columns>Status__c</columns>
    <columns>Data_Inicial__c</columns>
    <columns>Data_Final__c</columns>
    <columns>Dias_totais__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Registrada,Rejeitada,Cancelada</value>
    </filters>
    <filters>
        <field>Empresa__c</field>
        <operation>contains</operation>
        <value>HOSPCOM</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ferias__c.Solicitacao</value>
    </filters>
    <label>HOSPCOM Solicitações</label>
</ListView>