force-app/main/default/objects/Ferias__c/listViews/Registradas.listView-meta.xml
<ListView>
    <fullName>Registradas</fullName>
    <columns>NAME</columns>
    <columns>Colaborador3__c</columns>
    <columns>Status__c</columns>
    <columns>Data_Inicial__c</columns>
    <columns>Data_Final__c</columns>
    <columns>Dias_totais__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Registrada</value>
    </filters>
    <label>REGISTRADAS</label>
</ListView>