force-app/main/default/objects/Ferias__c/listViews/Solicitacoes.listView-meta.xml
<ListView>
    <fullName>Solicitacoes</fullName>
    <booleanFilter>(1 AND 2) OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Colaborador3__c</columns>
    <columns>Data_Inicial__c</columns>
    <columns>Data_Final__c</columns>
    <columns>Dias_totais__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejeitada,Cancelada</value>
    </filters>
    <filters>
        <field>Data_Inicial__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2025</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <label>Solicitações</label>
</ListView>