force-app/main/default/objects/Ferias__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Colaborador2__c</columns>
    <columns>Tipo_de_Contrato__c</columns>
    <columns>Data_Inicial__c</columns>
    <columns>Data_Final__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>